--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>make up</title>
+    <title>fredia</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+   
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap"
@@ -125,7 +122,7 @@
     </div>
     </div>
     <!-- SERVICE SECTION -->
-    <div class="container animate__animated animate__fadeInUp" id="gallery">
+    <div class="container" id="gallery">
       <div class="row">
         <div class="col-md-12 my-5">
           <p class="pinky cur-p">Our Makeup Services</p>
